# everybody-codes

./: README.md  pyproject.toml
events/2024/1/: solution.py
events/2024/10/: solution.py
events/2024/11/: solution.py
events/2024/18/: solution.py
events/2024/2/: solution.py
events/2024/3/: solution.py
events/2024/4/: solution.py
events/2024/6/: solution.py
events/2024/7/: solution.py
events/2024/8/: solution.py
events/2024/9/: solution.py
stories/1/1/: solution.py
stories/1/2/: solution.py
stories/1/3/: solution.py
stories/2/1/: solution.py
stories/2/2/: solution.py
stories/2/3/: solution.py
